--- a/SMS_spam_detection_using_LSTM.ipynb
+++ b/SMS_spam_detection_using_LSTM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQCdpcl2v9GdCGbDbxfW70",
+      "authorship_tag": "ABX9TyPAJTaN+ZJFM8dU9oesvyAs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -275,12 +275,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "C2QkMAZviTWZ",
         "outputId": "c9e78fab-ac90-49ad-df5f-f8b9b74e1525"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,7 +608,7 @@
         "id": "of7noUJri5GP",
         "outputId": "0603156d-89f5-482c-b5ce-e78fdbdf5290"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -631,6 +631,48 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df.v2\n",
+        "Y = df.v1\n",
+        "le = LabelEncoder()\n",
+        "Y = le.fit_transform(Y)\n",
+        "Y = Y.reshape(-1,1)"
+      ],
+      "metadata": {
+        "id": "4hL5uQk4uk9N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train,X_test,Y_train,Y_test = train_test_split(X,Y,test_size=0.15)"
+      ],
+      "metadata": {
+        "id": "GisVEyejuryY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_words = 1000\n",
+        "max_len = 150\n",
+        "tok = Tokenizer(num_words=max_words)\n",
+        "tok.fit_on_texts(X_train)\n",
+        "sequences = tok.texts_to_sequences(X_train)\n",
+        "sequences_matrix = sequence.pad_sequences(sequences,maxlen=max_len)"
+      ],
+      "metadata": {
+        "id": "EkdFKX7HvIIE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
