--- a/SMS_spam_detection_using_LSTM.ipynb
+++ b/SMS_spam_detection_using_LSTM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAJTaN+ZJFM8dU9oesvyAs",
+      "authorship_tag": "ABX9TyNcTDfAXXzLa0ma1D/P4/jL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
         },
         "id": "wmyFip6Pf32M",
-        "outputId": "ba4f152d-52ef-40b2-e0e5-368266388986"
+        "outputId": "3c289737-7928-4247-d05d-082f37c49aee"
       },
       "outputs": [
         {
@@ -46,9 +46,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-0f19879e-609c-48b8-9aaf-1ad37410265b\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-5f2d1b55-31c8-413d-aeed-b406dd3b3ee6\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-0f19879e-609c-48b8-9aaf-1ad37410265b\">\n",
+              "     <output id=\"result-5f2d1b55-31c8-413d-aeed-b406dd3b3ee6\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -275,12 +275,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 206
         },
         "id": "C2QkMAZviTWZ",
-        "outputId": "c9e78fab-ac90-49ad-df5f-f8b9b74e1525"
+        "outputId": "50fd0d35-2107-41ac-bb40-d855a7986b81"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +302,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-97cabc0f-fe31-493d-a54e-cdfb4fc54717\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c9913fea-eb38-4726-b47a-2964ef77ec10\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -375,7 +375,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97cabc0f-fe31-493d-a54e-cdfb4fc54717')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c9913fea-eb38-4726-b47a-2964ef77ec10')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -427,12 +427,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-97cabc0f-fe31-493d-a54e-cdfb4fc54717 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c9913fea-eb38-4726-b47a-2964ef77ec10 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-97cabc0f-fe31-493d-a54e-cdfb4fc54717');\n",
+              "        const element = document.querySelector('#df-c9913fea-eb38-4726-b47a-2964ef77ec10');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -452,8 +452,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b704b0b3-9523-448a-9fc7-db237db4991e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b704b0b3-9523-448a-9fc7-db237db4991e')\"\n",
+              "<div id=\"df-da7c045b-3f16-4094-b80e-c21bc3dc19c4\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-da7c045b-3f16-4094-b80e-c21bc3dc19c4')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -572,7 +572,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b704b0b3-9523-448a-9fc7-db237db4991e button');\n",
+              "        document.querySelector('#df-da7c045b-3f16-4094-b80e-c21bc3dc19c4 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -589,7 +589,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -606,9 +606,9 @@
           "height": 489
         },
         "id": "of7noUJri5GP",
-        "outputId": "0603156d-89f5-482c-b5ce-e78fdbdf5290"
+        "outputId": "18a1d535-e9ea-4a4e-c7e1-994b3dcddc06"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +618,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -644,7 +644,7 @@
       "metadata": {
         "id": "4hL5uQk4uk9N"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "GisVEyejuryY"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -671,8 +671,220 @@
       "metadata": {
         "id": "EkdFKX7HvIIE"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def RNN():\n",
+        "    inputs = Input(name='inputs',shape=[max_len])\n",
+        "    layer = Embedding(max_words,50,input_length=max_len)(inputs)\n",
+        "    layer = LSTM(64)(layer)\n",
+        "    layer = Dense(256,name='FC1')(layer)\n",
+        "    layer = Activation('relu')(layer)\n",
+        "    layer = Dropout(0.5)(layer)\n",
+        "    layer = Dense(1,name='out_layer')(layer)\n",
+        "    layer = Activation('sigmoid')(layer)\n",
+        "    model = Model(inputs=inputs,outputs=layer)\n",
+        "    return model"
+      ],
+      "metadata": {
+        "id": "l0GqO1oOtZ1j"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = RNN()\n",
+        "model.summary()\n",
+        "model.compile(loss='binary_crossentropy',optimizer=RMSprop(),metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pkm71UB0uWR8",
+        "outputId": "1b9d73f0-5372-44a9-e57c-dc66b2fba8b7"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " inputs (InputLayer)         [(None, 150)]             0         \n",
+            "                                                                 \n",
+            " embedding (Embedding)       (None, 150, 50)           50000     \n",
+            "                                                                 \n",
+            " lstm (LSTM)                 (None, 64)                29440     \n",
+            "                                                                 \n",
+            " FC1 (Dense)                 (None, 256)               16640     \n",
+            "                                                                 \n",
+            " activation (Activation)     (None, 256)               0         \n",
+            "                                                                 \n",
+            " dropout (Dropout)           (None, 256)               0         \n",
+            "                                                                 \n",
+            " out_layer (Dense)           (None, 1)                 257       \n",
+            "                                                                 \n",
+            " activation_1 (Activation)   (None, 1)                 0         \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 96337 (376.32 KB)\n",
+            "Trainable params: 96337 (376.32 KB)\n",
+            "Non-trainable params: 0 (0.00 Byte)\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(sequences_matrix,Y_train,batch_size=128,epochs=10,\n",
+        "          validation_split=0.2,callbacks=[EarlyStopping(monitor='val_loss',min_delta=0.0001)])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DQqvgi5Ruahl",
+        "outputId": "c74708bd-0a27-4584-9a59-f337203fe715"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "30/30 [==============================] - 12s 304ms/step - loss: 0.3937 - accuracy: 0.8572 - val_loss: 0.2295 - val_accuracy: 0.8903\n",
+            "Epoch 2/10\n",
+            "30/30 [==============================] - 8s 263ms/step - loss: 0.1610 - accuracy: 0.9556 - val_loss: 0.1230 - val_accuracy: 0.9631\n",
+            "Epoch 3/10\n",
+            "30/30 [==============================] - 8s 256ms/step - loss: 0.0686 - accuracy: 0.9834 - val_loss: 0.0742 - val_accuracy: 0.9810\n",
+            "Epoch 4/10\n",
+            "30/30 [==============================] - 9s 289ms/step - loss: 0.0471 - accuracy: 0.9884 - val_loss: 0.0647 - val_accuracy: 0.9778\n",
+            "Epoch 5/10\n",
+            "30/30 [==============================] - 10s 328ms/step - loss: 0.0300 - accuracy: 0.9921 - val_loss: 0.0671 - val_accuracy: 0.9789\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7f43165325f0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_sequences = tok.texts_to_sequences(X_test)\n",
+        "test_sequences_matrix = sequence.pad_sequences(test_sequences,maxlen=max_len)"
+      ],
+      "metadata": {
+        "id": "gCkb9BY3utLs"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "accr = model.evaluate(test_sequences_matrix,Y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tgKoa2MLuza1",
+        "outputId": "b90b2a02-6cf4-4b51-9c3b-63d4a3a6b409"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "27/27 [==============================] - 1s 23ms/step - loss: 0.0775 - accuracy: 0.9773\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Test set\\n  Loss: {:0.3f}\\n  Accuracy: {:0.3f}'.format(accr[0],accr[1]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZG7I5afku5u9",
+        "outputId": "c61dea43-2412-4435-89a5-4127db56aa27"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test set\n",
+            "  Loss: 0.078\n",
+            "  Accuracy: 0.977\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Testing_context = [\"You Have won $100,000 money\"]\n",
+        "\n",
+        "txts = tok.texts_to_sequences(Testing_context)\n",
+        "txts = sequence.pad_sequences(txts, maxlen=max_len)"
+      ],
+      "metadata": {
+        "id": "kHUssCVvvAqj"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "preds = model.predict(txts)\n",
+        "print(preds)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ds2oTD9HvFAc",
+        "outputId": "4f487b62-3991-4451-85e5-1f23ef36ad1b"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 25ms/step\n",
+            "[[0.6705022]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
