--- a/SMS_spam_detection_using_LSTM.ipynb
+++ b/SMS_spam_detection_using_LSTM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcTDfAXXzLa0ma1D/P4/jL",
+      "authorship_tag": "ABX9TyOtil9Ec8U4I4wy38gy5CaB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
         },
         "id": "wmyFip6Pf32M",
-        "outputId": "3c289737-7928-4247-d05d-082f37c49aee"
+        "outputId": "3bef4522-948b-4610-f92c-ce6de3009333"
       },
       "outputs": [
         {
@@ -46,9 +46,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-5f2d1b55-31c8-413d-aeed-b406dd3b3ee6\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-0ef5944a-91e5-44e8-a703-00258deaea27\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-5f2d1b55-31c8-413d-aeed-b406dd3b3ee6\">\n",
+              "     <output id=\"result-0ef5944a-91e5-44e8-a703-00258deaea27\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -278,9 +278,9 @@
           "height": 206
         },
         "id": "C2QkMAZviTWZ",
-        "outputId": "50fd0d35-2107-41ac-bb40-d855a7986b81"
+        "outputId": "2a3fdc3d-c0c5-40ca-9c5d-4298c1cf718a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +302,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c9913fea-eb38-4726-b47a-2964ef77ec10\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f1fad155-73b5-4b90-bc48-6e7817501817\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -375,7 +375,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c9913fea-eb38-4726-b47a-2964ef77ec10')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f1fad155-73b5-4b90-bc48-6e7817501817')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -427,12 +427,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c9913fea-eb38-4726-b47a-2964ef77ec10 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f1fad155-73b5-4b90-bc48-6e7817501817 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c9913fea-eb38-4726-b47a-2964ef77ec10');\n",
+              "        const element = document.querySelector('#df-f1fad155-73b5-4b90-bc48-6e7817501817');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -452,8 +452,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-da7c045b-3f16-4094-b80e-c21bc3dc19c4\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-da7c045b-3f16-4094-b80e-c21bc3dc19c4')\"\n",
+              "<div id=\"df-9bd503ad-33a7-49c7-9106-8704f286dc45\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9bd503ad-33a7-49c7-9106-8704f286dc45')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -572,7 +572,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-da7c045b-3f16-4094-b80e-c21bc3dc19c4 button');\n",
+              "        document.querySelector('#df-9bd503ad-33a7-49c7-9106-8704f286dc45 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -589,7 +589,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -606,9 +606,9 @@
           "height": 489
         },
         "id": "of7noUJri5GP",
-        "outputId": "18a1d535-e9ea-4a4e-c7e1-994b3dcddc06"
+        "outputId": "9ddc91b2-17c3-4c28-e9ea-3ad55c792e0a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +618,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -644,7 +644,7 @@
       "metadata": {
         "id": "4hL5uQk4uk9N"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "GisVEyejuryY"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -671,7 +671,7 @@
       "metadata": {
         "id": "EkdFKX7HvIIE"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -692,7 +692,7 @@
       "metadata": {
         "id": "l0GqO1oOtZ1j"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -707,9 +707,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pkm71UB0uWR8",
-        "outputId": "1b9d73f0-5372-44a9-e57c-dc66b2fba8b7"
+        "outputId": "80aa4112-20ed-4d1b-9a17-e3a33fb9f681"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,35 +755,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DQqvgi5Ruahl",
-        "outputId": "c74708bd-0a27-4584-9a59-f337203fe715"
+        "outputId": "16c0077f-cd22-445e-d745-621dcc415da2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "30/30 [==============================] - 12s 304ms/step - loss: 0.3937 - accuracy: 0.8572 - val_loss: 0.2295 - val_accuracy: 0.8903\n",
+            "30/30 [==============================] - 10s 258ms/step - loss: 0.4316 - accuracy: 0.8429 - val_loss: 0.2510 - val_accuracy: 0.8787\n",
             "Epoch 2/10\n",
-            "30/30 [==============================] - 8s 263ms/step - loss: 0.1610 - accuracy: 0.9556 - val_loss: 0.1230 - val_accuracy: 0.9631\n",
+            "30/30 [==============================] - 8s 269ms/step - loss: 0.1855 - accuracy: 0.9411 - val_loss: 0.1060 - val_accuracy: 0.9726\n",
             "Epoch 3/10\n",
-            "30/30 [==============================] - 8s 256ms/step - loss: 0.0686 - accuracy: 0.9834 - val_loss: 0.0742 - val_accuracy: 0.9810\n",
+            "30/30 [==============================] - 8s 252ms/step - loss: 0.0819 - accuracy: 0.9794 - val_loss: 0.0725 - val_accuracy: 0.9800\n",
             "Epoch 4/10\n",
-            "30/30 [==============================] - 9s 289ms/step - loss: 0.0471 - accuracy: 0.9884 - val_loss: 0.0647 - val_accuracy: 0.9778\n",
+            "30/30 [==============================] - 6s 213ms/step - loss: 0.0548 - accuracy: 0.9855 - val_loss: 0.0549 - val_accuracy: 0.9831\n",
             "Epoch 5/10\n",
-            "30/30 [==============================] - 10s 328ms/step - loss: 0.0300 - accuracy: 0.9921 - val_loss: 0.0671 - val_accuracy: 0.9789\n"
+            "30/30 [==============================] - 8s 253ms/step - loss: 0.0404 - accuracy: 0.9889 - val_loss: 0.0431 - val_accuracy: 0.9884\n",
+            "Epoch 6/10\n",
+            "30/30 [==============================] - 7s 219ms/step - loss: 0.0334 - accuracy: 0.9913 - val_loss: 0.0500 - val_accuracy: 0.9852\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7f43165325f0>"
+              "<keras.src.callbacks.History at 0x7c000f65fa00>"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -796,7 +798,7 @@
       "metadata": {
         "id": "gCkb9BY3utLs"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -809,15 +811,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tgKoa2MLuza1",
-        "outputId": "b90b2a02-6cf4-4b51-9c3b-63d4a3a6b409"
+        "outputId": "f044a22a-3c16-409f-e0cf-47d153a1ff48"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "27/27 [==============================] - 1s 23ms/step - loss: 0.0775 - accuracy: 0.9773\n"
+            "27/27 [==============================] - 1s 19ms/step - loss: 0.0547 - accuracy: 0.9856\n"
           ]
         }
       ]
@@ -832,17 +834,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZG7I5afku5u9",
-        "outputId": "c61dea43-2412-4435-89a5-4127db56aa27"
+        "outputId": "5a595a5d-17a0-4b7f-822b-31bc3c938950"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Test set\n",
-            "  Loss: 0.078\n",
-            "  Accuracy: 0.977\n"
+            "  Loss: 0.055\n",
+            "  Accuracy: 0.986\n"
           ]
         }
       ]
@@ -850,7 +852,7 @@
     {
       "cell_type": "code",
       "source": [
-        "Testing_context = [\"You Have won $100,000 money\"]\n",
+        "Testing_context = [\"SIX chances to win CASH! From 100 to 20,000 pounds txt> CSH11 and send to 87575. Cost 150p/day, 6days, 16+ TsandCs apply Reply to redeem\"]\n",
         "\n",
         "txts = tok.texts_to_sequences(Testing_context)\n",
         "txts = sequence.pad_sequences(txts, maxlen=max_len)"
@@ -858,7 +860,7 @@
       "metadata": {
         "id": "kHUssCVvvAqj"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -872,16 +874,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ds2oTD9HvFAc",
-        "outputId": "4f487b62-3991-4451-85e5-1f23ef36ad1b"
+        "outputId": "b4768bcf-b139-4d1f-f204-8f565ede0f52"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 25ms/step\n",
-            "[[0.6705022]]\n"
+            "1/1 [==============================] - 0s 37ms/step\n",
+            "[[0.99958104]]\n"
           ]
         }
       ]
